Fix black background to extend behind all events and students when list is longer than vh

--- a/client/src/components/AllEvents/AllEventsDark.module.css
+++ b/client/src/components/AllEvents/AllEventsDark.module.css
@@ -22,23 +22,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: black;
 }
 
-/* .listing {
-  background-color: orange;
-  width: 50%;
-  margin: 5px;
-  padding: 0.5rem;
-  border-radius: 15px;
-  font-weight: 600;
-  display: flex;
-  text-decoration: none;
-  color: #328889;
-}
-
-.listing:hover {
-  background-color: yellow;
-} */
 
 .addNewBtn {
   background-color: #9b409b;
